<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".actitities.Drawer"
    tools:showIn="@layout/app_bar_drawer">

    <android.support.v7.widget.CardView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="5dp"
        app:cardElevation="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/layoutUser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/cricle_trangchu_menu_bg"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:visibility="gone">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:orientation="vertical">

                                <LinearLayout
                                    android:id="@+id/infoHola"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent">

                                    <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="@string/hello"
                                        android:textSize="18dp"
                                        android:textStyle="bold" />

                                    <TextView
                                        android:id="@+id/name_text"
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:gravity="center"
                                        android:text="Simon Pham"
                                        android:textSize="18dp"
                                        android:textStyle="bold" />

                                </LinearLayout>

                                <TextView
                                    android:id="@+id/mssv_text"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:text="51702071" />
                            </LinearLayout>

                            <Button
                                android:id="@+id/btnLogout"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_alignParentRight="true"
                                android:background="@color/transparent"
                                android:text="@string/logout"
                                android:textColor="@color/black" />

                        </RelativeLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutUpdate"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tvTitleUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textStyle="bold" />

                        <WebView
                            android:id="@+id/logUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp" />

                        <Button
                            android:id="@+id/btnDownloadUpdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="right"
                            android:layout_marginTop="8dp"
                            android:background="@drawable/button_custom"
                            android:padding="5dp"
                            android:text="@string/update"
                            android:textColor="#ffffff"
                            android:textStyle="bold" />
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/layoutNews"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:focusableInTouchMode="true"
                        android:orientation="vertical"
                        android:padding="8dp"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/tvTitleNews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@android:color/black"
                            android:textStyle="bold" />

                        <WebView
                            android:id="@+id/logNews"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp" />
                    </LinearLayout>

                    <FrameLayout
                        android:id="@+id/fragment"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </android.support.v4.widget.NestedScrollView>

            <com.simonvn.tdtu.student.views.widget.SnowingView
                android:id="@+id/snowing_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:src="@drawable/snowflake" />

        </RelativeLayout>



    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>